# eos-license-service

./: .gitignore  Makefile.am  README.md  configure.ac  eos-license-service.service.in  eos-license-service.socket  licenseApp.js  licenseCrawler.js
build-aux/: docx-to-pdf
build-aux/libreoffice/: custom-profile.xcu
debian/: changelog  control  rules
terms/C/: Endless-Mobile-Terms-of-Use.docx  Endless-Terms-of-Use.docx
terms/eos/C/: Terms-of-Use.docx  Terms-of-Use.html  Terms-of-Use.md
terms/eos/es/: Terms-of-Use.docx
terms/eos/id/: Terms-of-Use.docx
terms/eos/pt_BR/: Terms-of-Use.docx
terms/eos/th/: Terms-of-Use.docx
terms/eos/vi/: Terms-of-Use.docx
terms/es/: Endless-Mobile-Terms-of-Use.docx  Endless-Terms-of-Use.docx
terms/id/: Endless-Terms-of-Use.docx
terms/pt_BR/: Endless-Terms-of-Use.docx
terms/th/: Endless-Terms-of-Use.docx
terms/vi/: Endless-Terms-of-Use.docx
